--- a/angular.json
+++ b/angular.json
@@ -32,7 +32,8 @@
             "styles": [
               "src/styles.scss",
               "primeng/resources/themes/viva-dark/theme.css",
-              "primeng/resources/primeng.css"
+              "primeng/resources/primeng.css",
+              "primeicons/primeicons.css"
             ],
             "scripts": []
           },
@@ -97,7 +98,8 @@
             "styles": [
               "src/styles.scss",
               "primeng/resources/themes/viva-dark/theme.css",
-              "primeng/resources/primeng.css"
+              "primeng/resources/primeng.css",
+              "primeicons/primeicons.css"
             ],
             "scripts": []
           }
